--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
+    "moveable": "^0.22.0",
     "sortablejs": "^1.12.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
