--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
+    "lodash": "^4.17.20",
     "moveable": "^0.22.0",
     "sortablejs": "^1.12.0",
     "vue": "^2.6.11",
