--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     "moveable": "^0.22.0",
     "sortablejs": "^1.12.0",
     "vue": "^2.6.11",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
